--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "  THIS IS A TRIAL TO SHOW\n",
+      "  this is a trial to show\n",
+      "  this is a trial to show\n",
+      "  This Is A Trial To Show\n",
+      "This is a Trial to show\n",
+      "  Thare are a Trial to show\n",
+      "['  This is a Trial to show']\n",
+      "12\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "x = 9\n",
-    "print (x)"
+    "x= \"  This is a Trial to show\"\n",
+    "\n",
+    "print (x.upper())\n",
+    "print (x.lower())\n",
+    "print (x.capitalize())\n",
+    "print (x.title())\n",
+    "print (x.strip())\n",
+    "print (x.replace(\"is\", \"are\"))\n",
+    "print (x.split(\",\"))\n",
+    "print (x.find(\"Trial\"))\n",
+    "print (x.startswith(\"this\"))\n",
+    "print (x.endswith(\"show\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "df9cbb9a",
+   "execution_count": 32,
+   "id": "aa1037f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "My name is Mohamed , My Age is 29 , I'm Studing Data Engineering Course, My ID is 1356\n",
+      "My name is Mohamed, My Age is 29, I'm Studing Data Engineering Course, My ID is 1356\n",
+      "My name is Mohamed, My Age is 29, I'm Studing Data Engineering Course, My ID is 1356\n"
      ]
     }
    ],
    "source": [
-    "print (\"hello\")"
+    "name = \"Mohamed\"\n",
+    "age = 29\n",
+    "course = \"Data Engineering\"\n",
+    "id = 1356\n",
+    "\n",
+    "print (\"My name is\", name,\", My Age is\", age, \", I'm Studing\", course, \"Course, My ID is\", id)\n",
+    "print (\"My name is {}, My Age is {}, I'm Studing {} Course, My ID is {}\".format(name, age, course, id))\n",
+    "print (f\"My name is {name}, My Age is {age}, I'm Studing {course} Course, My ID is {id}\")"
    ]
   }
  ],
