--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "x= \"  This is a Trial to show\"\n",
+    "x = \"  This is a Trial to show\"\n",
     "\n",
     "print (x.upper())\n",
     "print (x.lower())\n",
@@ -68,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".Env_Test (3.13.9)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
