--- a/src/Python/Session 1/Code/Task.ipynb
+++ b/src/Python/Session 1/Code/Task.ipynb
@@ -40,6 +40,103 @@
     "else:\n",
     "    print (\"Invalide\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "423f08fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emocleW EPGTQ\n",
+      "Welcome PGTQ\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"###!!@mocleW EPGTQ!!!6789\"\n",
+    "\n",
+    "core = message [5:18]\n",
+    "replaced = core.replace(\"@\", \"e\")\n",
+    "\n",
+    "print (replaced)\n",
+    "\n",
+    "first, second = replaced.split(\" \")\n",
+    "\n",
+    "reverse_1 = first [-1:-8:-1]\n",
+    "\n",
+    "reverse_2 = second [1:5]\n",
+    "\n",
+    "print (f\"{reverse_1} {reverse_2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "42f60a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gnirtS PLIO\n",
+      "String PLEU\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded = \"&&&**$gnirtS PLIO!!@1234\"\n",
+    "\n",
+    "core2 = encoded [6:17]\n",
+    "print (core2)\n",
+    "\n",
+    "first2, second2 = core2.split(\" \")\n",
+    "\n",
+    "rev1 = first2 [-1:-7:-1]\n",
+    "\n",
+    "rep = second2.replace (\"I\", \"E\")\n",
+    "\n",
+    "rev2 = rep.replace (\"O\", \"U\")\n",
+    "\n",
+    "print (f\"{rev1} {rev2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2af6cb9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yalpstcejorp EPUVT\n",
+      "projectsplay APOVT\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded2 = \"##$$$@!yalpstcejorp EPUVT****9887\"\n",
+    "\n",
+    "core3 = encoded2 [7:25]\n",
+    "\n",
+    "print (core3)\n",
+    "\n",
+    "first3, second3 = core3.split (\" \")\n",
+    "\n",
+    "rev3 = first3 [-1:-13:-1]\n",
+    "\n",
+    "rep2 = second3.replace (\"E\", \"A\")\n",
+    "\n",
+    "rep3 = rep2.replace (\"U\", \"O\")\n",
+    "\n",
+    "print (f\"{rev3} {rep3}\")"
+   ]
   }
  ],
  "metadata": {
