--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -10,32 +10,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  THIS IS A TRIAL TO SHOW\n",
-      "  this is a trial to show\n",
-      "  this is a trial to show\n",
-      "  This Is A Trial To Show\n",
-      "This is a Trial to show\n",
-      "  Thare are a Trial to show\n",
-      "['  This is a Trial to show']\n",
-      "12\n",
-      "False\n",
-      "True\n"
+      "Line 1\n",
+      "Line 2\n",
+      "Tab\tspaced\n",
+      "Backspactext\n",
+      "Bell sound \u0007\n",
+      "She said, \"Hello!\"\n",
+      "It's raining\n",
+      "Path: C:\\Users\\Name\n",
+      "World\n",
+      "Page 1\fPage 2\n"
      ]
     }
    ],
    "source": [
-    "x = \"  This is a Trial to show\"\n",
+    "print (\"Line 1\\nLine 2\")       # \\n = new line\n",
     "\n",
-    "print (x.upper())\n",
-    "print (x.lower())\n",
-    "print (x.capitalize())\n",
-    "print (x.title())\n",
-    "print (x.strip())\n",
-    "print (x.replace(\"is\", \"are\"))\n",
-    "print (x.split(\",\"))\n",
-    "print (x.find(\"Trial\"))\n",
-    "print (x.startswith(\"this\"))\n",
-    "print (x.endswith(\"show\"))\n"
+    "print (\"Tab\\tspaced\")          # \\t = tab\n",
+    "\n",
+    "print (\"Backspace\\btext\")      # \\b = backspace\n",
+    "\n",
+    "print (\"Bell sound \\a\")         # \\a = alert/bell (beep)\n",
+    "\n",
+    "print (\"She said, \\\"Hello!\\\"\")  # \\\" = double quote\n",
+    "\n",
+    "print ('It\\'s raining')         # \\' = Single quote\n",
+    "\n",
+    "print (\"Path: C:\\\\Users\\\\Name\") # \\\\ = backslash\n",
+    "\n",
+    "print (\"Hello\\rWorld\")          # \\r = The \"\\r\" makes \"World\" overwrite \"Hello\"\n",
+    "\n",
+    "print (\"Page 1\\fPage 2\")        # \\f = Advances to the next page, Form feed - \"new page\"\n"
    ]
   },
   {
