--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -10,64 +10,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line 1\n",
-      "Line 2\n",
-      "Tab\tspaced\n",
-      "Backspactext\n",
-      "Bell sound \u0007\n",
-      "She said, \"Hello!\"\n",
-      "It's raining\n",
-      "Path: C:\\Users\\Name\n",
-      "World\n",
-      "Page 1\fPage 2\n"
+      "[5, 6, 12, 20, 20, 35]\n",
+      "[35, 20, 20, 12, 6, 5]\n",
+      "-----------------------------------\n",
+      "[5, 6, 12, 20, 20, 35]\n",
+      "[35, 20, 20, 12, 6, 5]\n",
+      "-----------------------------------\n"
      ]
     }
    ],
    "source": [
-    "print (\"Line 1\\nLine 2\")       # \\n = new line\n",
+    "my_list = [12, 20, 35, 20, 5, 6]\n",
     "\n",
-    "print (\"Tab\\tspaced\")          # \\t = tab\n",
     "\n",
-    "print (\"Backspace\\btext\")      # \\b = backspace\n",
+    "my_list.sort()\n",
     "\n",
-    "print (\"Bell sound \\a\")         # \\a = alert/bell (beep)\n",
+    "print (my_list)\n",
     "\n",
-    "print (\"She said, \\\"Hello!\\\"\")  # \\\" = double quote\n",
+    "my_list.sort(reverse= True)\n",
     "\n",
-    "print ('It\\'s raining')         # \\' = Single quote\n",
+    "print (my_list)\n",
     "\n",
-    "print (\"Path: C:\\\\Users\\\\Name\") # \\\\ = backslash\n",
+    "print (\"-----------------------------------\")\n",
     "\n",
-    "print (\"Hello\\rWorld\")          # \\r = The \"\\r\" makes \"World\" overwrite \"Hello\"\n",
+    "new_list = sorted(my_list)\n",
     "\n",
-    "print (\"Page 1\\fPage 2\")        # \\f = Advances to the next page, Form feed - \"new page\"\n"
+    "print (new_list)\n",
+    "\n",
+    "new_list2 = sorted(my_list, reverse= True)\n",
+    "\n",
+    "print (new_list2)\n",
+    "\n",
+    "print (\"-----------------------------------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "aa1037f8",
+   "execution_count": 25,
+   "id": "0327a7ee",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is Mohamed , My Age is 29 , I'm Studing Data Engineering Course, My ID is 1356\n",
-      "My name is Mohamed, My Age is 29, I'm Studing Data Engineering Course, My ID is 1356\n",
-      "My name is Mohamed, My Age is 29, I'm Studing Data Engineering Course, My ID is 1356\n"
+      "[6, 5, 20, 35, 20, 12]\n",
+      "-----------------------------------\n",
+      "12\n",
+      "20\n",
+      "35\n",
+      "20\n",
+      "5\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "name = \"Mohamed\"\n",
-    "age = 29\n",
-    "course = \"Data Engineering\"\n",
-    "id = 1356\n",
+    "my_list2 = [12, 20, 35, 20, 5, 6]\n",
     "\n",
-    "print (\"My name is\", name,\", My Age is\", age, \", I'm Studing\", course, \"Course, My ID is\", id)\n",
-    "print (\"My name is {}, My Age is {}, I'm Studing {} Course, My ID is {}\".format(name, age, course, id))\n",
-    "print (f\"My name is {name}, My Age is {age}, I'm Studing {course} Course, My ID is {id}\")"
+    "my_list2.reverse()\n",
+    "\n",
+    "print (my_list2)\n",
+    "\n",
+    "print (\"-----------------------------------\")\n",
+    "\n",
+    "reversed(my_list2)\n",
+    "\n",
+    "for x in reversed(my_list2):\n",
+    "    print (x)"
    ]
   }
  ],
