--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -10,74 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 6, 12, 20, 20, 35]\n",
-      "[35, 20, 20, 12, 6, 5]\n",
-      "-----------------------------------\n",
-      "[5, 6, 12, 20, 20, 35]\n",
-      "[35, 20, 20, 12, 6, 5]\n",
-      "-----------------------------------\n"
+      "<class 'str'>\n",
+      "2929\n"
      ]
     }
    ],
    "source": [
-    "my_list = [12, 20, 35, 20, 5, 6]\n",
+    "age = input(\"Enter your age: \")\n",
     "\n",
+    "print(type(age))                     # <class 'str'> NOT int!\n",
     "\n",
-    "my_list.sort()\n",
-    "\n",
-    "print (my_list)\n",
-    "\n",
-    "my_list.sort(reverse= True)\n",
-    "\n",
-    "print (my_list)\n",
-    "\n",
-    "print (\"-----------------------------------\")\n",
-    "\n",
-    "new_list = sorted(my_list)\n",
-    "\n",
-    "print (new_list)\n",
-    "\n",
-    "new_list2 = sorted(my_list, reverse= True)\n",
-    "\n",
-    "print (new_list2)\n",
-    "\n",
-    "print (\"-----------------------------------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "0327a7ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 5, 20, 35, 20, 12]\n",
-      "-----------------------------------\n",
-      "12\n",
-      "20\n",
-      "35\n",
-      "20\n",
-      "5\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_list2 = [12, 20, 35, 20, 5, 6]\n",
-    "\n",
-    "my_list2.reverse()\n",
-    "\n",
-    "print (my_list2)\n",
-    "\n",
-    "print (\"-----------------------------------\")\n",
-    "\n",
-    "reversed(my_list2)\n",
-    "\n",
-    "for x in reversed(my_list2):\n",
-    "    print (x)"
+    "print(age * 2)                       # (string repetition!)"
    ]
   }
  ],
