--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "2929\n"
+      "this \\is trial\n"
      ]
     }
    ],
    "source": [
-    "age = input(\"Enter your age: \")\n",
+    "name = \"this \\\\is trial\"\n",
     "\n",
-    "print(type(age))                     # <class 'str'> NOT int!\n",
     "\n",
-    "print(age * 2)                       # (string repetition!)"
+    "\n",
+    "print (name)"
    ]
   }
  ],
