--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a016c32a",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this \\is trial\n"
+      "battle no requires which that is victory greatest The\n"
      ]
     }
    ],
    "source": [
-    "name = \"this \\\\is trial\"\n",
+    "test = \"The greatest victory is that which requires no battle\"\n",
     "\n",
+    "rev_1 = test.split (\" \")\n",
     "\n",
+    "rev_2 = rev_1 [-1::-1]\n",
     "\n",
-    "print (name)"
+    "print (*rev_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb430605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mohamed does not play banjo\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "name = input (\"Please Tell Me Your Name: \")\n",
+    "\n",
+    "x = name.lower ()\n",
+    "\n",
+    "m = x.startswith (\"r\")\n",
+    "\n",
+    "if m is True:\n",
+    "    print (f\"{name} plays banjo\")\n",
+    "else:\n",
+    "    print (f\"{name} does not play banjo\")"
    ]
   }
  ],
