--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -1,173 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "47822f5b",
-   "metadata": {},
-   "source": [
-    "#### **1. Comparison Conditions**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "04bed04f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greater than y\n",
-      "x equals 10\n",
-      "x and y are different\n",
-      "x is greater than or equal to 10\n",
-      "x is less than or equal to 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = 10\n",
-    "y = 5\n",
+    "from typing import Optional\n",
     "\n",
-    "if x > y:\n",
-    "    print(\"x is greater than y\")\n",
+    "class Solution:\n",
+    "    class ListNode:\n",
+    "        def __init__(self, val=0, next=None):\n",
+    "            self.val = val\n",
+    "            self.next = next\n",
+    "    def addTwoNumbers(l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        list1 = []\n",
+    "        list2 = []\n",
+    "        \n",
+    "        for x in l1 [range (len (l1))]:\n",
+    "            list1.append (x)\n",
+    "            return list1\n",
+    "        for z in l2:\n",
+    "            list2.append (z)\n",
+    "            return list2\n",
+    "            \n",
+    "        list1.reverse ()\n",
+    "        list2.reverse ()\n",
     "\n",
-    "if x == 10:\n",
-    "    print(\"x equals 10\")\n",
+    "        result = []\n",
     "\n",
-    "if x != y:\n",
-    "    print(\"x and y are different\")\n",
+    "        for item in list1:\n",
+    "            result.append (item + list2 [range (len(list1))])\n",
+    "            return result\n",
+    "        \n",
+    "        result.reverse ()\n",
     "\n",
-    "if x >= 10:\n",
-    "    print(\"x is greater than or equal to 10\")\n",
-    "\n",
-    "if x <= 20:\n",
-    "    print(\"x is less than or equal to 20\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f645adb",
-   "metadata": {},
-   "source": [
-    "#### **2. Logical Conditions (and, or, not)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ffe4f413",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eligible for loan\n",
-      "Employed\n",
-      "Premium member\n"
-     ]
-    }
-   ],
-   "source": [
-    "age = 25\n",
-    "income = 50000\n",
-    "has_job = True\n",
-    "\n",
-    "# AND (both must be True)\n",
-    "if age >= 18 and has_job:\n",
-    "    print(\"Eligible for loan\")\n",
-    "\n",
-    "# OR (at least one True)\n",
-    "if age < 18 or age > 65:\n",
-    "    print(\"Eligible for discount\")\n",
-    "\n",
-    "# NOT (reverses condition)\n",
-    "if not has_job:\n",
-    "    print(\"Looking for work\")\n",
-    "else:\n",
-    "    print(\"Employed\")\n",
-    "\n",
-    "# Combined\n",
-    "if (age >= 21 and has_job) or income > 100000:\n",
-    "    print(\"Premium member\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b3dde40",
-   "metadata": {},
-   "source": [
-    "#### **3. Membership Conditions (in, not in)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "588f8a42",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Apple is available\n",
-      "Grape is not available\n",
-      "Found 'Hello' in text\n",
-      "Name exists in dictionary\n"
-     ]
-    }
-   ],
-   "source": [
-    "fruits = [\"apple\", \"banana\", \"orange\"]\n",
-    "\n",
-    "# Check if item is in list\n",
-    "if \"apple\" in fruits:\n",
-    "    print(\"Apple is available\")\n",
-    "\n",
-    "if \"grape\" not in fruits:\n",
-    "    print(\"Grape is not available\")\n",
-    "\n",
-    "# With strings\n",
-    "text = \"Hello World\"\n",
-    "if \"Hello\" in text:\n",
-    "    print(\"Found 'Hello' in text\")\n",
-    "\n",
-    "# With dictionaries (checks keys)\n",
-    "person = {\"name\": \"Alice\", \"age\": 25}\n",
-    "if \"name\" in person:\n",
-    "    print(\"Name exists in dictionary\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75e773a5",
-   "metadata": {},
-   "source": [
-    "#### **4. Identity Conditions (is, is not)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "ae69d300",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory contents: ['AI_Data_Science_R4', 'ERP - R2', 'R4.png']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "# List all files and directories\n",
-    "contents = os.listdir(\"E:/DEPI\")  # Current directory\n",
-    "print(\"Directory contents:\", contents)"
+    "        print (result)\n"
    ]
   }
  ],
