--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,41 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "04bed04f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
-    "from typing import Optional\n",
+    "my_set = 10 / 2\n",
     "\n",
-    "class Solution:\n",
-    "    class ListNode:\n",
-    "        def __init__(self, val=0, next=None):\n",
-    "            self.val = val\n",
-    "            self.next = next\n",
-    "    def addTwoNumbers(l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
-    "        list1 = []\n",
-    "        list2 = []\n",
-    "        \n",
-    "        for x in l1 [range (len (l1))]:\n",
-    "            list1.append (x)\n",
-    "            return list1\n",
-    "        for z in l2:\n",
-    "            list2.append (z)\n",
-    "            return list2\n",
-    "            \n",
-    "        list1.reverse ()\n",
-    "        list2.reverse ()\n",
-    "\n",
-    "        result = []\n",
-    "\n",
-    "        for item in list1:\n",
-    "            result.append (item + list2 [range (len(list1))])\n",
-    "            return result\n",
-    "        \n",
-    "        result.reverse ()\n",
-    "\n",
-    "        print (result)\n"
+    "print (my_set)"
    ]
   }
  ],
