--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,22 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "04bed04f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
+     "ename": "KeyError",
+     "evalue": "'M'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 29\u001b[39m\n\u001b[32m     23\u001b[39m         prev_value = current_value\n\u001b[32m     25\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m total\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[43mromanToInt\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMCMXCIV\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mromanToInt\u001b[39m\u001b[34m(s)\u001b[39m\n\u001b[32m     13\u001b[39m prev_value = \u001b[32m0\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m char \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(s):\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     current_value = \u001b[43mroman_values\u001b[49m\u001b[43m[\u001b[49m\u001b[43mchar\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     18\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m current_value < prev_value:\n\u001b[32m     19\u001b[39m         total -= current_value\n",
+      "\u001b[31mKeyError\u001b[39m: 'M'"
      ]
     }
    ],
    "source": [
-    "my_set = 10 / 2\n",
+    "def romanToInt(s: str) -> int:\n",
+    "    item = s.upper ()\n",
+    "    roman_values = {\"I\": 1,\n",
+    "                    \"V\": 5,\n",
+    "                    \"X\": 10,\n",
+    "                    \"L\": 50,\n",
+    "                    \"C\": 100,\n",
+    "                    \"D\": 500,\n",
+    "                    \"M\": 1000\n",
+    "                    }\n",
+    "    \n",
+    "    total = 0\n",
+    "    prev_value = 0\n",
+    "    \n",
+    "    for char in reversed(s):\n",
+    "        current_value = roman_values[char]\n",
+    "        \n",
+    "        if current_value < prev_value:\n",
+    "            total -= current_value\n",
+    "        else:\n",
+    "            total += current_value\n",
+    "        \n",
+    "        prev_value = current_value\n",
+    "    \n",
+    "    return total\n",
     "\n",
-    "print (my_set)"
+    "\n",
+    "\n",
+    "romanToInt (\"MCMXCIV\")"
    ]
   }
  ],
