--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,53 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "04bed04f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'M'",
+     "ename": "AttributeError",
+     "evalue": "'BankAccount' object has no attribute '__verify_pin'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 29\u001b[39m\n\u001b[32m     23\u001b[39m         prev_value = current_value\n\u001b[32m     25\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m total\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[43mromanToInt\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMCMXCIV\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mromanToInt\u001b[39m\u001b[34m(s)\u001b[39m\n\u001b[32m     13\u001b[39m prev_value = \u001b[32m0\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m char \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(s):\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     current_value = \u001b[43mroman_values\u001b[49m\u001b[43m[\u001b[49m\u001b[43mchar\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     18\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m current_value < prev_value:\n\u001b[32m     19\u001b[39m         total -= current_value\n",
-      "\u001b[31mKeyError\u001b[39m: 'M'"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      7\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.__pin\u001b[38;5;250m \u001b[39m==\u001b[38;5;250m \u001b[39mpin\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m --- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.__owner\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Verification Success!!!\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m x = BankAccount (\u001b[33m\"\u001b[39m\u001b[33mMohamed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m5556\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[43mx\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__verify_pin\u001b[49m(\u001b[32m5556\u001b[39m))\n",
+      "\u001b[31mAttributeError\u001b[39m: 'BankAccount' object has no attribute '__verify_pin'"
      ]
     }
    ],
    "source": [
-    "def romanToInt(s: str) -> int:\n",
-    "    item = s.upper ()\n",
-    "    roman_values = {\"I\": 1,\n",
-    "                    \"V\": 5,\n",
-    "                    \"X\": 10,\n",
-    "                    \"L\": 50,\n",
-    "                    \"C\": 100,\n",
-    "                    \"D\": 500,\n",
-    "                    \"M\": 1000\n",
-    "                    }\n",
+    "class BankAccount:\n",
+    "    def __init__(self, owner, pin):\n",
+    "        self.__owner = owner        # Private\n",
+    "        self.__pin = pin\n",
     "    \n",
-    "    total = 0\n",
-    "    prev_value = 0\n",
+    "    def __verify_pin (self, pin):   # Private Method\n",
+    "        return f\"{self.__pin == pin} --- {self.__owner}, Verification Success!!!\"\n",
     "    \n",
-    "    for char in reversed(s):\n",
-    "        current_value = roman_values[char]\n",
-    "        \n",
-    "        if current_value < prev_value:\n",
-    "            total -= current_value\n",
-    "        else:\n",
-    "            total += current_value\n",
-    "        \n",
-    "        prev_value = current_value\n",
-    "    \n",
-    "    return total\n",
+    "x = BankAccount (\"Mohamed\", 5556)\n",
     "\n",
-    "\n",
-    "\n",
-    "romanToInt (\"MCMXCIV\")"
+    "print (x.__verify_pin(5556))\n",
+    "\n"
    ]
   }
  ],
