--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -1,36 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "04bed04f",
+   "cell_type": "markdown",
+   "id": "bdfdfa17",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'BankAccount' object has no attribute '__verify_pin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      7\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.__pin\u001b[38;5;250m \u001b[39m==\u001b[38;5;250m \u001b[39mpin\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m --- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.__owner\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Verification Success!!!\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m x = BankAccount (\u001b[33m\"\u001b[39m\u001b[33mMohamed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m5556\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[43mx\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__verify_pin\u001b[49m(\u001b[32m5556\u001b[39m))\n",
-      "\u001b[31mAttributeError\u001b[39m: 'BankAccount' object has no attribute '__verify_pin'"
-     ]
-    }
-   ],
    "source": [
-    "class BankAccount:\n",
-    "    def __init__(self, owner, pin):\n",
-    "        self.__owner = owner        # Private\n",
-    "        self.__pin = pin\n",
-    "    \n",
-    "    def __verify_pin (self, pin):   # Private Method\n",
-    "        return f\"{self.__pin == pin} --- {self.__owner}, Verification Success!!!\"\n",
-    "    \n",
-    "x = BankAccount (\"Mohamed\", 5556)\n",
-    "\n",
-    "print (x.__verify_pin(5556))\n",
-    "\n"
+    "- change username\n",
+    "- change password\n",
+    "- enter to products list\n",
+    "- "
    ]
   }
  ],
