--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,11 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86e5b678",
+   "execution_count": 2,
+   "id": "48ccb381",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a     2\n",
+      "b     5\n",
+      "c     6\n",
+      "d     4\n",
+      "e     9\n",
+      "f    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "x = pd.Series ([2, 5, 6, 4, 9, 10], index= [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"])\n",
+    "\n",
+    "print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f2b62340",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   id      4 non-null      int64 \n",
+      " 1   num     4 non-null      int64 \n",
+      " 2   name    4 non-null      object\n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 228.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "data = [[1,444,'abc'],\n",
+    "        [2,555,'def'],\n",
+    "        [3,666,'ghi'],\n",
+    "        [4,444,'xyz']]\n",
+    "\n",
+    "x = pd.DataFrame (data, columns= [\"id\", \"num\", \"name\"])\n",
+    "\n",
+    "x.info ()"
+   ]
   }
  ],
  "metadata": {
