--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "48ccb381",
    "metadata": {},
    "outputs": [
@@ -10,59 +10,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a     2\n",
-      "b     5\n",
-      "c     6\n",
-      "d     4\n",
-      "e     9\n",
-      "f    10\n",
-      "dtype: int64\n"
+      "Original DataFrame:\n",
+      "     A    B     C\n",
+      "0  1.0  NaN  10.0\n",
+      "1  NaN  2.0  11.0\n",
+      "2  3.0  NaN  12.0\n",
+      "3  NaN  4.0   NaN\n",
+      "4  5.0  NaN  14.0\n",
+      "\n",
+      "1. Fill all NaN with 0:\n",
+      "     A    B     C\n",
+      "0  1.0  0.0  10.0\n",
+      "1  0.0  2.0  11.0\n",
+      "2  3.0  0.0  12.0\n",
+      "3  0.0  4.0   0.0\n",
+      "4  5.0  0.0  14.0\n",
+      "\n",
+      "2. Fill with different values per column:\n",
+      "       A      B     C\n",
+      "0    1.0 -999.0  10.0\n",
+      "1  999.0    2.0  11.0\n",
+      "2    3.0 -999.0  12.0\n",
+      "3  999.0    4.0   0.0\n",
+      "4    5.0 -999.0  14.0\n",
+      "\n",
+      "3. Fill with mean of column:\n",
+      "     A    B      C\n",
+      "0  1.0  3.0  10.00\n",
+      "1  3.0  2.0  11.00\n",
+      "2  3.0  3.0  12.00\n",
+      "3  3.0  4.0  11.75\n",
+      "4  5.0  3.0  14.00\n",
+      "\n",
+      "4. Fill with median of column:\n",
+      "     A    B     C\n",
+      "0  1.0  3.0  10.0\n",
+      "1  3.0  2.0  11.0\n",
+      "2  3.0  3.0  12.0\n",
+      "3  3.0  4.0  11.5\n",
+      "4  5.0  3.0  14.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.DataFrame({\n",
+    "    'A': [1, np.nan, 3, np.nan, 5],\n",
+    "    'B': [np.nan, 2, np.nan, 4, np.nan],\n",
+    "    'C': [10, 11, 12, np.nan, 14]\n",
+    "})\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
     "\n",
-    "x = pd.Series ([2, 5, 6, 4, 9, 10], index= [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"])\n",
+    "# 1. Fill with a constant value\n",
+    "print(\"\\n1. Fill all NaN with 0:\")\n",
+    "df_filled_0 = df.fillna(0)\n",
+    "print(df_filled_0)\n",
     "\n",
-    "print (x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f2b62340",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4 entries, 0 to 3\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   id      4 non-null      int64 \n",
-      " 1   num     4 non-null      int64 \n",
-      " 2   name    4 non-null      object\n",
-      "dtypes: int64(2), object(1)\n",
-      "memory usage: 228.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
+    "print(\"\\n2. Fill with different values per column:\")\n",
+    "df_filled_dict = df.fillna({'A': 999, 'B': -999, 'C': 0})\n",
+    "print(df_filled_dict)\n",
     "\n",
+    "print(\"\\n3. Fill with mean of column:\")\n",
+    "df_filled_mean = df.copy()\n",
+    "for col in df.columns:\n",
+    "    if pd.api.types.is_numeric_dtype(df[col]):\n",
+    "        df_filled_mean[col] = df[col].fillna(df[col].mean())\n",
+    "print(df_filled_mean)\n",
     "\n",
-    "data = [[1,444,'abc'],\n",
-    "        [2,555,'def'],\n",
-    "        [3,666,'ghi'],\n",
-    "        [4,444,'xyz']]\n",
-    "\n",
-    "x = pd.DataFrame (data, columns= [\"id\", \"num\", \"name\"])\n",
-    "\n",
-    "x.info ()"
+    "print(\"\\n4. Fill with median of column:\")\n",
+    "df_filled_median = df.copy()\n",
+    "for col in df.columns:\n",
+    "    if pd.api.types.is_numeric_dtype(df[col]):\n",
+    "        df_filled_median[col] = df[col].fillna(df[col].median())\n",
+    "print(df_filled_median)"
    ]
   }
  ],
