--- a/src/Python/Session 1/Code/basic.ipynb
+++ b/src/Python/Session 1/Code/basic.ipynb
@@ -5,8 +5,47 @@
    "execution_count": null,
    "id": "48ccb381",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp',\n",
+       "       'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x = \"C:/Users/aucid/Downloads/train.csv\"\n",
+    "\n",
+    "class CSV_Handle:\n",
+    "\n",
+    "    def __init__(self, path):\n",
+    "        self.path = path\n",
+    "        self.df = None\n",
+    "        self._load_data ()\n",
+    "\n",
+    "    def Column_head (self):\n",
+    "        self.df = pd.read_csv (self.path)\n",
+    "        try:\n",
+    "            return f\"Data read Sucessfully:\\n{self.df}\"\n",
+    "        except FileNotFoundError:\n",
+    "            print ('File Not Found !!!')\n",
+    "    \n",
+    "    def Clean_Null (self):\n",
+    "        check = self.df.isna ().sum ()\n",
+    "        if check > 0:\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
